Added examples for exchanger
added read & write to Excel and json

--- a/OpenAPIComplexExampleCSharp/OpenAPIComplexExampleCSharp.csproj
+++ b/OpenAPIComplexExampleCSharp/OpenAPIComplexExampleCSharp.csproj
@@ -85,6 +85,43 @@
       <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.AnalysisDataModel.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="ModelExchanger.AnalysisDataModel.Contracts, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.AnalysisDataModel.Contracts.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.AnalysisDataModel.Implementation, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.AnalysisDataModel.Implementation.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.AnalysisDataModel.Integration.Bootstrapper, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.AnalysisDataModel.Integration.Bootstrapper.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.Excel.Conversion.Contracts, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.Excel.Conversion.Contracts.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.Excel.Conversion.Implementation, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.Excel.Conversion.Implementation.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.Excel.DataAccess.Contracts, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.Excel.DataAccess.Contracts.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.Excel.DataAccess.Implementation, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.Excel.DataAccess.Implementation.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.Excel.DataAccess.Models, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.Excel.DataAccess.Models.dll</HintPath>
+    </Reference>
+    <Reference Include="ModelExchanger.Excel.Integration.Bootstrapper, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.Excel.Integration.Bootstrapper.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="ModelExchanger.Shared.Models">
       <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\ModelExchanger.Shared.Models.dll</HintPath>
       <Private>False</Private>
@@ -94,10 +131,58 @@
       <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\SCIA.OpenAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="SciaTools.AdmToAdm.AdmSignalR.Contracts">
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.AdmToAdm.AdmSignalR.Contracts.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.AdmToAdm.AdmSignalR.Implementation">
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.AdmToAdm.AdmSignalR.Implementation.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.AdmToAdm.AdmSignalR.Integration">
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.AdmToAdm.AdmSignalR.Integration.dll</HintPath>
+    </Reference>
     <Reference Include="SciaTools.AdmToAdm.AdmSignalR.Models, Version=19.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.AdmToAdm.AdmSignalR.Models.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="SciaTools.AdmToAdm.Integration.Implementation">
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.AdmToAdm.Integration.Implementation.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.AdmToAdm.Integration.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.AdmToAdm.Integration.Models.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.AdmToAdm.Integration.Scia, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.AdmToAdm.Integration.Scia.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.Kernel.Common.Contracts, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.Kernel.Common.Contracts.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.Kernel.Common.Implementation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.Kernel.Common.Implementation.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.Kernel.Common.Integration, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.Kernel.Common.Integration.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.Kernel.Common.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.Kernel.Common.Models.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.Kernel.ModelExchangerExtension.Contracts, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.Kernel.ModelExchangerExtension.Contracts.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.Kernel.ModelExchangerExtension.Implementation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.Kernel.ModelExchangerExtension.Implementation.dll</HintPath>
+    </Reference>
+    <Reference Include="SciaTools.Kernel.ModelExchangerExtension.Integration, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SCIA-ENGINEER\TESTING-VERSIONS\Full_19.1.2010.64_rel_19.1_patch_2_x64\OpenAPI_dll\SciaTools.Kernel.ModelExchangerExtension.Integration.dll</HintPath>
     </Reference>
     <Reference Include="SciaTools.Kernel.ModelExchangerExtension.Models, Version=19.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
